# eskerra-studio

./: .editorconfig  .gitignore  AGENTS.md  APPSTORE-EXCEPTION.txt  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json
.claude/plans/: reviewpunten-fase0-6-aanpak.md  useMainWindowWorkspace-decompositie.md  useMainWindowWorkspace-review-fase7-10.md
.cursor/plans/: git-sync-engine.md
.cursor/rules/: css-colocation.mdc  desktop-ui.mdc  language.mdc  quality.mdc  specs.mdc  testing-desktop.mdc  testing.mdc  vitest-desktop-test-isolation.mdc
.cursor/rules/shared/: testing.mdc
.cursor/skills/: README.md
.cursor/skills/design-an-interface/: SKILL.md
.cursor/skills/grill-me/: SKILL.md
.cursor/skills/improve-codebase-architecture/: CONTEXT-FORMAT.md  SKILL.md
.cursor/skills/request-refactor-plan/: SKILL.md
.cursor/skills/review-architecture-drift-responsibility-boundaries/: SKILL.md
.cursor/skills/review-markdown-integrity-data-loss-prevention/: SKILL.md
.cursor/skills/review-state-consistency-closure-safety/: SKILL.md
.cursor/skills/tdd/: SKILL.md
.cursor/skills/to-prd/: SKILL.md
.cursor/skills/ubiquitous-language/: SKILL.md
.cursor/skills/zoom-out/: SKILL.md
.github/: pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/desktop/src/: App.css  App.tsx  desktop-globals.d.ts  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/linux/: 80-eskerra-reminderd.preset  com.eskerra.desktop.desktop  eskerra-reminderd.service  eskerra.desktop.hbs  rpm-postinstall.sh  rpm-preremove.sh
apps/desktop/src-tauri/metainfo/: eskerra.metainfo.xml
apps/desktop/src-tauri/src/: fetch_ics.rs  lib.rs  linux_app_identity.rs  main.rs  media.rs  open_reminder.rs  reminders.rs  startup_theme.rs  vault_search.rs  vault_search_index.rs  vault_watch.rs
apps/desktop/src-tauri/src/vault_git_sync/: cli.rs  commands.rs  config.rs  errors.rs  local_commit.rs  lock.rs  mod.rs  stage_plan.rs  status.rs  sync_run.rs  validation.rs
apps/desktop/src/components/: AddToInboxDialog.module.css  AddToInboxDialog.test.tsx  AddToInboxDialog.tsx  AppStatusBar.css  AppStatusBar.test.tsx  AppStatusBar.tsx  BackupMergePanel.tsx  DesktopHorizontalSplit.tsx  DesktopHorizontalSplitEnd.tsx  DesktopVerticalSplit.tsx  EditorPaneOpenNoteTabs.test.tsx  EditorPaneOpenNoteTabs.tsx  EditorWorkspaceToolbar.test.tsx  EditorWorkspaceToolbar.tsx  EpisodesPane.test.tsx  EpisodesPane.tsx  GitStatusChip.css  GitStatusChip.test.tsx  GitStatusChip.tsx  MainWorkspaceSplit.tsx  NotificationsPanel.test.tsx  NotificationsPanel.tsx  NowPlayingProgressSlider.test.tsx  NowPlayingProgressSlider.tsx  QuickOpenNotePalette.tsx  ToastStack.test.tsx  ToastStack.tsx  TodayHubCanvas.test.tsx  TodayHubCanvas.tsx  TodayHubCellStaticRichText.tsx  TodayHubWorkspaceSelect.tsx  VaultPaneTree.tsx  VaultSearchPalette.tsx  VaultTab.linkContext.test.ts  (+11 more)
apps/mobile/: Gemfile  package.json
apps/mobile/__tests__/: podcastImageCache.test.ts
assets/brand/: README.md  eskerra-icon-manifest.json
crates/eskerra-reminder-core/: Cargo.toml
crates/eskerra-reminder-core/src/: date_token.rs  index.rs  lib.rs  merge.rs  resolve.rs  scanner.rs
crates/eskerra-reminderd/: Cargo.toml
crates/eskerra-reminderd/src/: config.rs  daemon.rs  index_store.rs  lib.rs  main.rs  notify.rs  obs.rs  paths.rs  rederive.rs  run.rs  scan.rs  scheduler.rs  service.rs  watch_control.rs  writeback.rs
crates/eskerra-reminderd/tests/: integration.rs
crates/eskerra-vault-watch/: Cargo.toml
crates/eskerra-vault-watch/src/: exclusions.rs  lib.rs
docs/: sentry-android-source-maps.md
mock-vault/General/: 🗓️ Personal agenda.md
mock-vault/Work/: Today.md
patches/: @codemirror+language-data+6.5.2.patch  @codemirror+view+6.43.0.patch  eslint-plugin-react+7.37.5.patch
scripts/: assert-app-versions-align.mjs  bump-release-version.mjs  check-desktop-vite-bundle-budget.mjs  check-module-budgets.mjs  eslint-disable-baseline.json  generate-brand-app-icons.sh  generate-brand-app-icons.test.mjs  module-budget-baseline.json  shared-conventions.manifest.json  sync-shared-conventions.sh  tauri-desktop-build.mjs  tauri-desktop-build.test.mjs  update-module-budget-baseline.mjs  update-module-budget-baseline.test.mjs
scripts/shared-conventions/: skills-README.sibling.md
specs/adrs/: 001-adr-vitest-desktop-test-isolation.md  002-adr-main-window-workspace-decompositie.md  003-adr-reminder-daemon.md  adr-main-window-workspace-decompositie.md  adr-vitest-desktop-test-isolation.md
specs/architecture/: calendar-ics-agenda-pipeline.md  clean-note-markdown.md  desktop-component-css.md  desktop-date-token.md  desktop-editor.md  desktop-keybindings-inventory.md  desktop-mobile-parity.md  desktop-startup-theme.md  markdown-callouts.md  platform-targets.md  today-hub-editor-parity.md
specs/design/: brand-tokens-desktop.md  desktop-shell-patterns.md
specs/features/: podcast-loading.md
specs/observability/: desktop-reminderd.md  phase-1-slice-implemented.md
specs/performance/: desktop-vite-bundle-baseline.md  todayhub-cell-edit-mode-latency.md
specs/plans/: android-podcasts-rebuild-spec.md  android-r2-vault-settings.md  android-vault-notes-rebuild-spec.md  calendar-ics-agenda-pipeline.md  calendar-pipeline-review-followups.md  desktop-feature-parity-phased.md  desktop-reminders-daemon-phased.md  desktop-reminders-followup-line-snooze-buttons.md  desktop-settings-workspace.md  desktop-shell-wiki-backlog.md  git-sync-engine.md  team-maintainability-phased.md  today-hub-week-cell-live-row-disk-sync.md
specs/rules/: shared-conventions.md
specs/team-scalability/: README.md  current-status.md  logbook.md  phase-2-lib-domain-plan.md  phase-2-vault-domain-audit.md  useMainWindowWorkspace-candidates.md
website-content/: features.md  hero.md
(+471 files in other folders)
