[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/eskerra-reminder-core",
]

# Vendored patches for the Tauri/desktop app build (see
# apps/desktop/src-tauri/Cargo.toml for the rationale comments). Lives at the
# workspace root because [patch.crates-io] is workspace-wide; paths are
# rewritten relative to this root now that the app crate is a workspace member.
#
# (vendor/tauri-plugin-window-state): persist size/position when the WM reports
# maximized but geometry is not fullscreen (tiling / Wayland false positives).
# (vendor/glib): RUSTSEC-2024-0429 — the GTK3 / webkit2gtk stack requires
# glib ^0.18; we vendor glib 0.18.5 with the upstream `VariantStrIter`
# out-pointer fix (`&mut p` for variadic `g_variant_get_child`).
[patch.crates-io]
tauri-plugin-window-state = { path = "apps/desktop/src-tauri/vendor/tauri-plugin-window-state" }
glib = { path = "apps/desktop/src-tauri/vendor/glib" }
