[package]
name = "eskerra-reminderd"
# Inherited from [workspace.package] in the root Cargo.toml so the release bump
# drives it automatically; the daemon ships in the same RPM as the app and must
# carry a matched version (ADR 003 §2).
version.workspace = true
description = "Eskerra reminder daemon: headless, always-on owner of vault scanning, the reminder index, OS notifications, and strikethrough write-back. Reads ~/.config/eskerra/reminderd.json; the Tauri app only reads the index it produces."
authors = ["Eskerra contributors"]
license = "AGPL-3.0-only"
edition = "2021"
rust-version = "1.77.2"
publish = false

[[bin]]
name = "eskerra-reminderd"
path = "src/main.rs"

[dependencies]
eskerra-reminder-core = { path = "../eskerra-reminder-core" }
eskerra-vault-watch = { path = "../eskerra-vault-watch" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
# Wall-clock for index `generatedAtMs`; matches the core crate's chrono.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Config-file watching reuses the same notify major as the shared watcher.
notify = "6"
# Native org.freedesktop.Notifications + org.freedesktop.login1 (PrepareForSleep)
# over D-Bus (Phase 3 / ADR 003 §6). Same major already in the app's tree (via
# tauri-plugin-opener) so this adds no new D-Bus stack version. We use the
# blocking API, matching the daemon's thread-per-source model.
zbus = "5"

[dev-dependencies]
tempfile = "3"
